# EmbarcaTech

./: README.md
Seguranca_IoT/: CMakeLists.txt
Seguranca_IoT/include/: ssd1306.h
Seguranca_IoT/scr/: Projeto_Finale.c
Seguranca_IoT/src/: Projeto_Finale.c  blink.pio  ssd1306.c
